--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="admin/assets/css/adminlte.min.css">
+
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -63,6 +65,13 @@
           <li><a class="nav-link scrollto " href="#portfolio">Portafolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
+          <li class="dropdown"><a href="#"><span>Busquedas</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="admin/?c=Docs&a=Public">Descripción Documental</a></li>
+              <li><a href="#">Inventario Documental</a></li>
+              <li><a href="#">Centro Documental</a></li>
+            </ul>
+          </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
