--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
           <li class="dropdown"><a href="#"><span>Busquedas</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="admin/?c=Docs&a=Public">Descripción Documental</a></li>
-              <li><a href="#">Inventario Documental</a></li>
-              <li><a href="#">Centro Documental</a></li>
+              <li><a href="admin/?c=Docs&a=Public">Base de datos Descripción Documental</a></li>
+              <li><a href="#">Base de datos Inventario Documental</a></li>
+              <li><a href="#">Base de datos Centros de Documentación</a></li>
             </ul>
           </li>
         </ul>
