--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <h1>Bienvenido a <span>Docs</span></h1>
-      <h2>Presentación blbalblablalbalbblb</h2>
+      <h2>Investigación sobre patrimonio documental del corregimiento de San Antonio de Prado</h2>
       <div class="d-flex">
         <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Video</span></a>
       </div>
