--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
           <li><a class="nav-link scrollto " href="#portfolio">Portafolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
-          <li class="dropdown"><a href="#"><span>Busquedas</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Bases de Datos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="admin/?c=Docs&a=Public">Base de datos Descripción Documental</a></li>
-              <li><a href="#">Base de datos Inventario Documental</a></li>
-              <li><a href="#">Base de datos Centros de Documentación</a></li>
+              <li><a href="admin/?c=Docs&a=Public">Descripción Documental</a></li>
+              <li><a href="#">Inventario Documental</a></li>
+              <li><a href="#">Centros de Documentación</a></li>
             </ul>
           </li>
         </ul>
