--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
+  <!-- ======= Top Bar ======= 
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
@@ -48,6 +48,7 @@
       </div>
     </div>
   </section>
+-->
 
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
@@ -68,8 +69,8 @@
           <li class="dropdown"><a href="#"><span>Bases de Datos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="admin/?c=Docs&a=Public">Descripción Documental</a></li>
-              <li><a href="#">Inventario Documental</a></li>
-              <li><a href="#">Centros de Documentación</a></li>
+              <li><a href="admin/?c=Inventory&a=Public">Inventario Documental</a></li>
+              <li><a href="admin/?c=Centre&a=Public">Centros de Documentación</a></li>
             </ul>
           </li>
         </ul>
@@ -83,9 +84,9 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <h1>Bienvenido a <span>Docs</span></h1>
-      <h2>Investigación sobre patrimonio documental del corregimiento de San Antonio de Prado</h2>
+      <h2>Investigación sobre el patrimonio documental del corregimiento de <b>San Antonio de Prado</b></h2>
       <div class="d-flex">
-        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Video</span></a>
+        <a href="https://www.youtube.com/watch?v=cXFDeunuuIM" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Video</span></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -97,34 +98,28 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-            </div>
-          </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <h4 class="title"><a href="">Descripción Documental</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">Inventario Documental</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <h4 class="title"><a href="">Centros de Documentación</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
             </div>
           </div>
@@ -139,7 +134,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>Nosotros</h2>
           <h3>Find Out More <span>About Us</span></h3>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
