--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Docs</title>
+  <title>PraDoc</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,7 +54,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Docs<span>.</span></a></h1>
+      <h1 class="logo"><a href="index.html">PraDoc<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
@@ -71,6 +71,7 @@
               <li><a href="admin/?c=Docs&a=Public">Descripción Documental</a></li>
               <li><a href="admin/?c=Inventory&a=Public">Inventario Documental</a></li>
               <li><a href="admin/?c=Centre&a=Public">Centros de Documentación</a></li>
+              <li><a href="admin/?c=History&a=Public">Rodrigo Atehortúa</a></li>
             </ul>
           </li>
         </ul>
@@ -83,7 +84,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Bienvenido a <span>Docs</span></h1>
+      <h1>Bienvenido a <span>PraDoc</span></h1>
       <h2>Investigación sobre el patrimonio documental del corregimiento de <b>San Antonio de Prado</b></h2>
       <div class="d-flex">
         <a href="https://www.youtube.com/watch?v=cXFDeunuuIM" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Video</span></a>
