--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Curuba<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
+   <a href="index.html" class="logo"><img src="admin/assets/img/logo.jpg" alt=""></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -79,7 +77,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <h1>Bienvenido a <span>Curuba</span></h1>
-      <h2>Curuba <b>Store</b></h2>
+      <h2>Ropa y <b>Complementos</b></h2>
       <div class="d-flex">
         <a href="https://www.youtube.com/watch?v=cXFDeunuuIM" class="glightbox btn-watch-video"><i
             class="bi bi-play-circle"></i><span>Video</span></a>
